[package]
name          = "mio-extras"
version       = "2.0.6"
license       = "MIT OR Apache-2.0"
authors       = ["Carl Lerche <me@carllerche.com>", "David Hotham"]
description   = "Extra components for use with Mio"
documentation = "https://docs.rs/mio-extras"
repository    = "https://github.com/dimbleby/mio-extras"
readme        = "README.md"
keywords      = ["io", "async", "non-blocking"]
categories    = ["asynchronous"]
exclude       = [".gitignore"]
edition       = "2018"

[dependencies]
mio = {path="../mio"}
log = { git = "https://github.com/mesalock-linux/log-sgx", branch = "master", features = ["kv_unstable"] }
lazycell = "1"
slab = { git = "https://github.com/mesalock-linux/slab-sgx", branch = "master" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs", "thread", "backtrace"] }

[[test]]
name = "test"
path = "test/mod.rs"
